# re

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
.zed/: tasks.json
recdc/: Cargo.toml
recdc/src/: codec.rs  lib.rs  utf8.rs
recz/: Cargo.toml
recz/src/: api.rs  lib.rs
recz/src/api/: playground.rs
recz/tests/: playground.rs
redt/: Cargo.toml
redt/src/: legible.rs  lib.rs  macros.rs  ops.rs  range.rs  range_list.rs  range_set.rs  set.rs  set_u8.rs  step.rs
redt/tests/: itest.rs
redt/tests/redt/: legible.rs  macros.rs  mod.rs  range.rs  range_list.rs  range_set.rs  set.rs  set_u8.rs  step.rs
regn/: Cargo.toml
regn/src/: lib.rs
regn/tests/: itest.rs
regn/tests/regn/: mod.rs
regr/: Cargo.toml
regr/src/: adt.rs  arena.rs  edge.rs  error.rs  graph.rs  instruct.rs  isa.rs  lib.rs  nfa.rs  node.rs  operation.rs  ops.rs  parse.rs  range.rs  span.rs  symbl.rs  symbol.rs  symmap.rs  symrng.rs  symset.rs  tag.rs  transition.rs  translate.rs  translator.rs  translator.utest.rs
regr/src/algo/: determ.rs  mod.rs  verify.rs  visit.rs
regr/src/algo/utest/: determ.rs
regr/src/dfa/: graph.rs  node.rs
regr/src/nfa/: graph.rs  node.rs
regr/src/node/: arena.rs  nfa.rs
regr/tests/: itest.rs
regr/tests/regr/: algo.rs  arena.rs  dfa.rs  edge.rs  graph.rs  mod.rs  node.rs  parse.rs  range.rs  span.rs  symbol.rs  transition.rs  translate.rs  translator.rs
regr/tests/regr/algo/: verify.rs
regr/tests/regr/dfa/: graph.rs  node.rs
regr/tests/regr/nfa/: graph.rs  node.rs
regr/tests/regr/node/: arena.rs  nfa.rs
remc/: Cargo.toml
remc/src/: codegen.rs  lib.rs  regex.rs
remc/src/utest/: codegen.rs
remc/tests/: itest.rs
remc/tests/remc/: mod.rs
renc/: Cargo.toml
renc/src/: coder.rs  encoder.rs  encoding.rs  error.rs  lib.rs  range.rs  utf8.rs
renc/tests/: itest.rs
renc/tests/renc/: encoding.rs  mod.rs  utf8.rs
resy/: Cargo.toml
resy/docs/: byte-gramm.mkf  grammar-re.mkf  grammar-str-lit.mkf  unic-gramm.mkf
resy/src/: codec.rs  error.rs  hir.rs  lexis.rs  lib.rs  parse.rs  str.rs  syntax.rs  syntax.utest.rs
resy/src/codec/: error.rs  utf8.rs
resy/src/str/: error.rs  lexis.rs  syntax.rs  syntax.utest.rs
resy/src/str/syntax/: utest.rs
resy/tests/: itest.rs
resy/tests/resy/: error.rs  hir.rs  lexis.rs  mod.rs  parse.rs  str.rs  syntax.rs
resy/tests/resy/str/: error.rs  lexis.rs  syntax.rs
rex/: Cargo.toml
rexel/: Cargo.toml
