[workspace]
members = ["regr", "resy", "rexel"]
resolver = "2"

[workspace.package]
authors = ["Maksim Tomkavich <quendimax@gmail.com>"]
edition = "2024"
repository = "https://github.com/quendimax/re.git"

[workspace.dependencies]
assert_matches = "1"
ntest = "*"
pretty_assertions = "1"
smallvec = "1"
thiserror = "2"
