[workspace]
members = ["regr", "renc", "resy", "rexel"]
resolver = "2"

[workspace.package]
authors = ["Maksim Tomkavich <quendimax@gmail.com>"]
edition = "2024"
repository = "https://github.com/quendimax/re"

[workspace.dependencies]
arrayvec = "0.7.6"
assert_matches = "1"
bumpalo = "~3.17"
cfg-if = "1"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
ntest = "*"
pretty_assertions = "1"
smallvec = "1"
thiserror = "2"
