[package]
name = "regr"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bumpalo = { workspace = true, features = ["collections"] }
cfg-if.workspace = true
linked-hash-map = { workspace = true, optional = true }
linked_hash_set = { workspace = true, optional = true }
paste.workspace = true
redt = { path = "../redt" }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
smallvec.workspace = true
