[package]
name = "remc"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
regr = { path = "../regr" }
renc = { path = "../renc" }
resy = { path = "../resy" }
syn.workspace = true
