[package]
name = "remc"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
regr = { path = "../regr" }
resy = { path = "../resy" }
syn.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
recz = { path = "../recz" }
syn = { workspace = true, features = ["full"] }
