[package]
name = "renc"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
regr = { path = "../regr" }
thiserror.workspace = true

[dev-dependencies]
arrayvec.workspace = true
assert_matches.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
regex-syntax.workspace = true
