[package]
name = "renc"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
arrayvec.workspace = true
regr = { path = "../regr" }
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
regex-syntax.workspace = true
test-case.workspace = true

[features]
test-bruteforce-utf8 = []
