[package]
name = "resy"
version = "0.1.0"

# workspace inheritance
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
regr = { path = "../regr" }
smallvec.workspace = true

# from workspace
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
