[package]
name = "resy"
version = "0.1.0"

# workspace inheritance
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
regr = { path = "../regr" }
recdc = { path = "../recdc" }
smallvec.workspace = true
thiserror.workspace = true

[features]
hash-map = ["regr/hash-map"]
hash-set = ["regr/hash-set"]
hash = ["hash-map", "hash-set"]
ordered-hash-map = ["regr/ordered-hash-map"]
ordered-hash-set = ["regr/ordered-hash-set"]
ordered-hash = ["ordered-hash-map", "ordered-hash-set"]

[dev-dependencies]
assert_matches.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
