[package]
name = "resy"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
redt = { path = "../redt" }
regr = { path = "../regr" }
renc = { path = "../renc" }
smallvec.workspace = true
static_assertions.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
